Finished project - Add function for adding initial books - Fixed bug with height of cards when there is two-lines title - Changed design of a form for adding books - Add border radius to books cards - Add left border to form background - Try to fix bugs on Safari :`)

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     margin: 0 3vh;
     --lines: 1px solid #000000;
     --books-gap: 32px;
+    --lines-border-radius: 24px;
 }
 
 header {
@@ -48,14 +49,16 @@ h2 {
     gap: var(--books-gap);
     padding-top: var(--books-gap);
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    align-items: stretch;
 }
 
 .book {
     border: var(--lines);
+    border-radius: var(--lines-border-radius);
     padding: var(--books-gap);
     display: flex;
     flex-direction: column;
-    gap: 48px;
+    justify-content: space-between;
 }
 
 .book h1, .book h2 {
@@ -79,6 +82,7 @@ h2 {
 }
 
 .book .buttons {
+    margin-top: 48px;
     display: flex;
     justify-content: space-between;
     gap: 16px;
@@ -104,6 +108,8 @@ h2 {
     justify-content: center;
     background: rgba(0,0,0,0.5);
     backdrop-filter: blur(7px);
+    z-index: 998;
+    border-left: var(--lines);
 }
 
 #form-container.visible {
@@ -149,6 +155,23 @@ input[type="checkbox"]::before {
 
 form button {
     border: var(--lines);
+    border-radius: var(--lines-border-radius);
     background-color: #ffffff;
-    padding: 6px;
+    padding: 8px;
+
+}
+
+form {
+    background-color: #6e6e6e;
+    padding: 64px;
+    border-radius: var(--lines-border-radius);
+    border: var(--lines);
+}
+
+input[type="text"], input[type="number"] {
+    max-width: 180px;
+    height: 28px;
+    border: var(--lines);
+    border-radius: 8px;
+    padding-left: 4px;
 }
